--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ seaborn==0.13.2
 six==1.17.0
 threadpoolctl==3.6.0
 tzdata==2025.3
+xgboost>=2.0.0
+shap>=0.44.0
+optuna>=3.5.0
+streamlit>=1.35.0
+plotly>=5.20.0
