--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ colorama==0.4.6
 colorlog==6.10.1
 contourpy==1.3.3
 cycler==0.12.1
+flask==3.1.0
+flask-cors==5.0.0
 fonttools==4.61.1
 gitdb==4.0.12
 GitPython==3.1.46
